<?xml version="1.0"?>
<package format="2">
  <name>sonardyne_usbl</name>
  <version>0.0.0</version>
  <description>Nodes to interface with Sonardyne systems</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sonardyne_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
